<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.simplilearn</groupId>
  <artifactId>mavenproject</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  <name>mavenproject</name>
  <!-- FIXME change it to the project's website -->
  <url>http://www.example.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <!-- Set Java version to 20 -->
    <maven.compiler.source>22</maven.compiler.source>
    <maven.compiler.target>22</maven.compiler.target>
    <maven.compiler.target>22</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>
    <dependency>
		<groupId>org.openjdk.jmh</groupId>
		<artifactId>jmh-core</artifactId>
		<version>1.35</version>
	</dependency>
	<dependency>
		<groupId>org.openjdk.jmh</groupId>
		<artifactId>jmh-generator-annprocess</artifactId>
		<version>1.35</version>
	</dependency>
	<dependency>
		<groupId>org.apache.jmeter</groupId>
		<artifactId>ApacheJMeter_core</artifactId>
		<version>5.1</version>
	</dependency>
	<dependency>
		<groupId>org.apache.jmeter</groupId>
		<artifactId>ApacheJMeter_java</artifactId>
		<version>5.1</version>
	</dependency>
  </dependencies>

  <build>
    <plugins>
        <!-- Maven Compiler Plugin -->
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.11.0</version> <!-- Use a version that supports Java 20 -->
            <configuration>
                <compilerArgs>
                    <arg>--enable-preview</arg>
                </compilerArgs>
            </configuration>
        </plugin>
        <!-- Other plugins -->
        <!-- Ensure other plugins are compatible with Java 20 and virtual threads -->
    </plugins>
</build>
</project>
